[gd_scene load_steps=11 format=3 uid="uid://cxvge5ioguhha"]

[ext_resource type="Script" path="res://scenes/levels/base_level.gd" id="1_wpd5f"]
[ext_resource type="PackedScene" uid="uid://bywxfap358dos" path="res://scenes/characters/asteroids/mug.tscn" id="2_1n4qa"]
[ext_resource type="PackedScene" uid="uid://b3ypsumm8r1i6" path="res://scenes/components/hud.tscn" id="3_tx64n"]
[ext_resource type="PackedScene" uid="uid://bcun56n4p4ycq" path="res://scenes/game_over_screen.tscn" id="4_xc33q"]
[ext_resource type="PackedScene" uid="uid://cpks16ngn4yom" path="res://scenes/components/background_field.tscn" id="5_6malw"]
[ext_resource type="PackedScene" uid="uid://b41qbmh5ajyej" path="res://scenes/characters/player/player.tscn" id="6_ah4vx"]
[ext_resource type="PackedScene" uid="uid://i7fmwocae0k3" path="res://scenes/components/game_spawn_area.tscn" id="7_622sv"]
[ext_resource type="AudioStream" uid="uid://v55k4b13efgb" path="res://assets/audio/sfx_laser1.wav" id="8_4j7nw"]
[ext_resource type="AudioStream" uid="uid://cj6d3b2f2d56x" path="res://assets/audio/hit.wav" id="9_lsvfq"]
[ext_resource type="AudioStream" uid="uid://ekmur3pq86bq" path="res://assets/audio/explode.wav" id="10_ou1of"]

[node name="Level2MugAttack" type="Node2D"]
script = ExtResource("1_wpd5f")
asteroid_scene = Array[PackedScene]([ExtResource("2_1n4qa")])
asteroid_count = 5

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("3_tx64n")]
unique_name_in_owner = true
metadata/_edit_use_anchors_ = true

[node name="GameOverScreen" parent="UI" instance=ExtResource("4_xc33q")]
visible = false
offset_right = 0.0
offset_bottom = 0.0

[node name="BackgroundField" parent="." instance=ExtResource("5_6malw")]

[node name="Player" parent="." instance=ExtResource("6_ah4vx")]
position = Vector2(576, 324)
scale = Vector2(0.7, 0.7)

[node name="PlayerSpawnPosition" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="GameSpawnArea" parent="PlayerSpawnPosition" instance=ExtResource("7_622sv")]

[node name="Lasers" type="Node" parent="."]

[node name="Asteroids" type="Node" parent="."]

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4j7nw")

[node name="AsteroidHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_lsvfq")

[node name="PlayerDieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ou1of")
